...
    <string name="apps">App Manager</string>
    <string name="ftp">FTP Server</string>
    <string name="setting">Settings</string>
    <string name="select">Select Item</string>
    <string name="press_again">Press again to exit</string>
    <string name="open">Open</string>
    <string name="backup">Backup</string>
    <string name="uninstall">Uninstall</string>
    <string name="play">Play store</string>
    <string name="properties">Properties</string>
    <string name="copyingapks">Copying %d APK files to %s</string>
    <string name="delbook">Delete Bookmark</string>
    <string name="add_to_bookmarks">Add to Bookmarks</string>
...
    <string name="create">CREATE</string>
    <string name="loading">Loading&#8230;</string>
    <string name="file_empty">File is empty</string>
    <string name="error">Error</string>
    <string name="search_results">Search results of %s</string>
    <string name="rename">Rename</string>
    <string name="save">Save</string>
    <string name="bookmarks_added">Bookmarks Added</string>
    <string name="fileexist">File with same name already exists </string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="size_capitalized">Size</string>
...
    <string name="sort_only_this">Only this folder</string>
    <string name="theme">Theme</string>
    <string name="random">Random Skin</string>
    <string name="random_summary">Sets random primary color at startup</string>
    <string name="colorize">Colorize Icons</string>
    <string name="colorize_summary">Sets static icon color. Doesn\'t override directory icon color preference.</string>
    <string name="home">Home</string>
    <string name="paste">Paste</string>
    <string name="history">History</string>
    <string name="copy">Copy</string>
    <string name="root_mode">Root Explorer</string>
    <string name="root_mode_summary">For rooted device only. Check it only if you are sure about it.</string>
    <string name="root_failure">Root Access not granted</string>
...
    <string name="ui_summary">Control what information to show, customize the sidebar, and toggle UI preferences</string>
    <string name="behavior_summary">Modify behaviors such as advanced search and whether to open files as a new task</string>
    <string name="security_summary">Set up password and encryption</string>
    <string name="backup_summary">Export/Import Amaze settings</string>


    <string name="pref_export">Export</string>
    <string name="pref_export_summary">Export settings</string>
    <string name="pref_import">Import</string>
    <string name="pref_import_summary">Import settings</string>

    <string name="quick_desc">Files recently accessed through Amaze</string>
    <string name="recent_desc">Recently created or modified files</string>
...
